# lightcurve-pipeline

./: .gitignore  README.md  catalog_utils.py  datasets.yml  flagdata.last  flagmanager.last  image-parrot.yml  image_utils.py  lightcurve-pipeline.yml  lightcurves.ipynb  listobs.last  log-stimela.txt  parrot-cabs.yml  parrot-observation-sets.yml  pyproject.toml  stimela.config.deps
lightcurve_pipeline/: configurations.yml  datasets.yml  image_utils.py  lightcurve-cabs.yml  lightcurve-pipeline.yml  lightcurve-steps.yml
lightcurve_pipeline/configs/: ata-testing.yml  configurations.yml  meerkat-l-band.yml  meerkat-uhf-band.yml
lightcurve_pipeline/flagging/: meerkat_1k_basic.yml  meerkat_L_band.yml  meerkat_target_narrow.tri.yml
lightcurve_pipeline/masking/: masking.yml  masking_cabs.yml
obs-l1-qc2/logs/: log
obs-l1-qc2/logs/log-20240318-150909/: log-ratt-parrot.flag-reset.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-151048/: log-ratt-parrot.flag-reset.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-151500/: log-ratt-parrot.flag-reset.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-151636/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-151726/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-151933/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-152000/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-152421/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-152946/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-153345/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
obs-l1-qc2/logs/log-20240318-154650/: log-ratt-parrot.flag-save.txt  log-ratt-parrot.txt  stimela.recipe.deps  stimela.stats.full  stimela.stats.summary.txt
