[project]
name = "lightcurve-pipeline"
version = "0.0.0"
description = "Basic pipeline for post-1GC lightcurve extraction."
repository = "https://github.com/JSKenyon/lightcurve-pipeline"
authors = [
    { name = "Jonathan Kenyon", email = "jonosken@gmail.com" },
    { name = "Joe Bright", email = "joe.bright@physics.ox.ac.uk" },
    { name = "Oleg Smirnov", email = "osmirnov@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Astronomy"
]
requires_python = ">=3.10, <3.11"
dependencies = [
    "stimela @ git+https://github.com/caracal-pipeline/stimela.git@issue-447",
    "cult-cargo @ git+https://github.com/caracal-pipeline/cult-cargo.git@master"
]

[project.optional-dependencies]
local = [
    "breifast @ git+https://github.com/ratt-ru/breifast.git@master"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"